<resources>
    <string name="check_verify">Mengecek Data</string>
    <string name="upload_id_card">Unggah\nKartu Identitas</string>
    <string name="upload_selfie_photo">Unggah\nFoto Selfie</string>
    <string name="completing_data">Lengkapi Data</string>
    <string name="kyc_start_title">Lengkapi data anda untuk melengkapi</string>
    <string name="subdesc_kyc_gettingstarted">Lengkapi data identitas anda agar valid oleh sistem kami dan dapat mulai menggunakan layanan aplikasi Cashplus.</string>
    <string name="enter_id">Foto KTP</string>
    <string name="enter_selfie_with_id">Foto Selfie</string>
    <string name="step_1">Langkah 1</string>
    <string name="step_1_desc_point1">Pastikan KTP masih berlaku dan foto terbaca dengan jelas.</string>
    <string name="step_1_desc_point2">Pastikan <b>nama</b> dan <b>nik</b> sesuai dengan akun cashplus anda.</string>
    <string name="photo_clear">Foto KTP Terlihat jelas.</string>
    <string name="blurry_photo">Foto buram dan tidak dapat dibaca</string>
    <string name="safe_privacy">Semua data anda sepenuhnya aman dan rahasia di sistem kami.</string>
    <string name="take_photo">Ambil Foto</string>
    <string name="step_2">Langkah 2</string>
    <string name="step_2_desc_point1">Pastikan foto selfie tidak buram dan sesuai ketentuan</string>
    <string name="step_2_desc_point2">Pastikan selfie tidak memakai atribut tambahan. Seperti masker, kacamata, topi dan lainnya.</string>
    <string name="processing_upload">Proses Unggah Foto</string>
    <string name="verify_processing">Proses Verifikasi</string>
    <string name="verify_waiting">Anda berhasil melengkapi kartu identitas,\ntunggu beberapa saat sampai sistem kami\nmemverifikasi data anda.</string>
    <string name="back_to_dashboard">Ke Halaman Utama</string>
    <string name="waiting_upload_kyc">Selamat, anda berhasil melengkapi kartu identitas.\nTunggu beberapa saat sampai kami memverifikasi identitas anda.</string>
    <string name="photo_upload_rejected">Unggah Foto Ditolak</string>
    <string name="repeat_verify">Verifikasi Ulang</string>
    <string name="verify_successfully">Verifikasi Berhasil</string>
    <string name="verify_failed">Verifikasi Gagal</string>
    <string name="upload_failed">Gagal Unggah</string>
    <string name="re_upload">Unggah Ulang</string>
    <string name="selfie_not_similar">Foto yang diunggah tidak memiliki kesamaan dengan KTP.\nSilahkan Unggah Ulang</string>
    <string name="upload_failed_id_card_desc">Data ktp masih belum sesuai dengan profil anda, silahkan perbarui terlebih dahulu.</string>
    <string name="upload_failed_selfie_photo">Proses upload selfie anda gagal, silahkan coba lagi.</string>
    <string name="kyc_approved">Data berhasil diverifikasi, sekarang kamu\ndapat menikmati fitur Cashplus lainnya</string>
    <string name="kyc_rejected">Verifikasi anda ditolak karena tidak sesuai dengan ketentuan.\nSilahkan unggah ulang atau hubungi Customer Service</string>
    <string name="please_update_your_profile">Silahkan lengkapi/perbarui profil anda!.</string>
    <string name="change_account">Ubah Akun</string>
</resources>