<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8FAFC">

    <TextView
        android:id="@+id/txtFailed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="20sp"
        android:text="@string/verify_failed"
        android:textColor="#1E293B"
        app:layout_constraintVertical_bias=".15"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/img_illustration_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:src="@drawable/ic_illustration_failed"
        app:layout_constraintTop_toBottomOf="@id/txtFailed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvKycRejected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:layout_marginHorizontal="@dimen/dimen_24"
        android:fontFamily="@font/poppins_regular"
        android:textSize="13sp"
        android:text="@string/kyc_rejected"
        android:textColor="#334155"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/img_illustration_success"/>

    <com.pasukanlangit.id.core.presentation.components.ButtonPrimaryCashplusRounded
        android:id="@+id/btn_repeat_verify"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_38"
        android:layout_marginTop="@dimen/dimen_20"
        android:padding="0dp"
        android:text="@string/repeat_verify"
        app:layout_constraintWidth_percent=".5"
        app:layout_constraintTop_toBottomOf="@id/tvKycRejected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>