<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8FAFC">

    <TextView
        android:id="@+id/txtCompleting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_20"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="24sp"
        android:text="@string/kyc_start_title"
        android:textColor="#1E293B"
        app:layout_constraintVertical_bias=".05"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/txtSubDescCompleting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8"
        android:layout_marginHorizontal="@dimen/dimen_20"
        android:fontFamily="@font/poppins_regular"
        android:textSize="14sp"
        android:text="@string/subdesc_kyc_gettingstarted"
        android:textColor="#334155"
        app:layout_constraintTop_toBottomOf="@id/txtCompleting"/>

    <LinearLayout
        android:id="@+id/wrapper_step_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/dimen_20"
        android:paddingTop="@dimen/dimen_12"
        android:paddingBottom="@dimen/dimen_12"
        app:layout_constraintTop_toBottomOf="@id/txtSubDescCompleting">

        <TextView
            android:layout_width="@dimen/dimen_28"
            android:layout_height="@dimen/dimen_28"
            android:background="@drawable/bg_circle_blue50"
            android:gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:textSize="13sp"
            android:text="1"
            android:textColor="#0A57FF"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/poppins_regular"
            android:textSize="14sp"
            android:text="@string/enter_id"
            android:textColor="#334155"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginHorizontal="@dimen/dimen_20"
        android:background="#F1F5F9"
        app:layout_constraintTop_toBottomOf="@id/wrapper_step_first"/>

    <LinearLayout
        android:id="@+id/wrapper_step_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/dimen_20"
        android:paddingTop="@dimen/dimen_12"
        android:paddingBottom="@dimen/dimen_12"
        app:layout_constraintTop_toBottomOf="@id/wrapper_step_first">

        <TextView
            android:layout_width="@dimen/dimen_28"
            android:layout_height="@dimen/dimen_28"
            android:background="@drawable/bg_circle_blue50"
            android:gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:textSize="13sp"
            android:text="2"
            android:textColor="#0A57FF"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/poppins_regular"
            android:textSize="14sp"
            android:text="@string/enter_selfie_with_id"
            android:textColor="#334155"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginHorizontal="@dimen/dimen_20"
        android:background="#F1F5F9"
        app:layout_constraintTop_toBottomOf="@id/wrapper_step_second"/>

    <com.pasukanlangit.id.core.presentation.components.ButtonPrimaryCashplusRounded
        android:id="@+id/btn_completing_data"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_42"
        android:layout_marginBottom="@dimen/dimen_16"
        android:padding="0dp"
        android:text="@string/completing_data"
        android:layout_marginHorizontal="@dimen/dimen_20"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>