<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".pages.completing.KycIdentityFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtStep1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:layout_marginStart="@dimen/dimen_16"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="18sp"
            android:text="@string/step_1"
            android:textColor="#1E293B"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/txt_point1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:fontFamily="@font/poppins_regular"
            android:textSize="13sp"
            android:text="@string/step_1_desc_point1"
            android:textColor="#334155"
            android:drawablePadding="@dimen/dimen_8"
            tools:drawableStart="@drawable/ic_arrow_black_right"
            app:drawableStartCompat="@drawable/ic_arrow_black_right"
            app:layout_constraintTop_toBottomOf="@id/txtStep1"/>

        <TextView
            android:id="@+id/txt_point2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_6"
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:fontFamily="@font/poppins_regular"
            android:textSize="13sp"
            android:text="@string/step_1_desc_point2"
            android:textColor="#334155"
            android:drawablePadding="@dimen/dimen_8"
            tools:drawableStart="@drawable/ic_arrow_black_right"
            app:drawableStartCompat="@drawable/ic_arrow_black_right"
            app:layout_constraintTop_toBottomOf="@id/txt_point1"/>

        <LinearLayout
            android:id="@+id/wrapper_example_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/txt_point2">

            <LinearLayout
                android:id="@+id/wrapper_example_photo_true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/dimen_4"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:src="@drawable/dummy_id_right" />

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:gravity="center_horizontal"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="12sp"
                    android:text="@string/photo_clear"
                    android:textColor="#334155"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/wrapper_example_photo_false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/dimen_4"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:src="@drawable/dummy_id_wrong"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:gravity="center_horizontal"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="12sp"
                    android:text="@string/blurry_photo"
                    android:textColor="#334155"/>
            </LinearLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/wrapper_state_safe_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:padding="@dimen/dimen_12"
            android:background="@drawable/bg_green50_border_green100_rounded_8"
            app:layout_constraintTop_toBottomOf="@id/wrapper_example_photo">

            <View
                android:id="@+id/img_safe_privacy"
                android:layout_width="@dimen/dimen_24"
                android:layout_height="@dimen/dimen_24"
                android:background="@drawable/ic_safe_privacy"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/txtSafePrivacy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8"
                android:fontFamily="@font/poppins_regular"
                android:textSize="12sp"
                android:text="@string/safe_privacy"
                android:textColor="#334155"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_safe_privacy"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_take_photo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_42"
            android:layout_marginTop="@dimen/dimen_12"
            android:layout_marginBottom="@dimen/dimen_20"
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:background="@drawable/bg_primary_rounded_20"
            app:layout_constraintTop_toBottomOf="@id/wrapper_state_safe_privacy"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_vertical"
                android:textSize="13sp"
                android:text="@string/take_photo"
                android:textColor="@android:color/white"
                android:drawablePadding="@dimen/dimen_12"
                tools:drawableStart="@drawable/ic_kyc_camera"
                app:drawableStartCompat="@drawable/ic_kyc_camera"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>